# chichewa-RAG-based-chatbot

./: .gitignore  DEPLOYMENT.md  IMPROVEMENT_PLAN.md  PROGRESS.md  README.md  SPE_APPROACH.md  app.py  main.py  pyproject.toml  requirements.txt  run_app.sh
data/: nb-eval-set.xlsx  ~$Shoprite shops-close.docx  ~$lebrity-leaks.docx  ~$ne-Ansah.docx  ~$nstitutions on paper.docx  ~$orts-1.docx
data/docs/: 2 Shoprite shops-close.docx  sports-1.docx
data/docs/news-articles/: Constitutions on paper.docx  Jane-Ansah.docx  celebrity-leaks.docx
data/translations/: english_chichewa_phrases.csv  english_chichewa_phrases.xlsx
src/: chichewa_phrases.py  contact_loader.py  document_processor.py  downloader-nb-product-profiles.py  rag_chain.py  spe_chain.py  translator.py
tests/: BASELINE_RESULTS.md  SESSION_1_RESULTS.md  compare_rag_spe.py  simple_eval.py
