[project]
name = "rag-demo-chichewa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=1.3.5",
    "docx>=0.2.4",
    "dotenv>=0.9.9",
    "langchain>=1.1.2",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.1",
    "langchain-openai>=1.1.0",
    "pypdf==5.1.0",
    "python-docx>=1.2.0",
    "requests>=2.32.5",
    "streamlit>=1.52.0",
]
